docs(be): актуализация swagger; response wrappers
